# rusgit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: prebuild.sh  rust.yml
src/: main.rs
