[package]
name = "rusgit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
urlencoding = {version = "2.1.0"}
hyper-tls = {version = "0.5.0"}
serde_json = {version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
